Fixed one of the cards. Added spacing to some text

--- a/src/components/pages/PagesButton.css
+++ b/src/components/pages/PagesButton.css
@@ -20,4 +20,6 @@
   width: 400px;
   text-align: left;
   margin-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
